# qxsql

./: Cargo.toml  README.md
.github/workflows/: rust.yml
.zed/: debug.json  settings.json
db/migrations/: 20250809151001_app_db.up.sql
src/: appstate.rs  config.rs  lib.rs  main.rs  shvnode.rs  sql.rs  sql_impl.rs  sql_replace.rs  sql_utils.rs
