[package]
name = "qxsqld"
version = "0.1.0"
edition = "2024"

[dependencies]
shvproto = { git = "https://github.com/silicon-heaven/libshvproto-rs", branch = "master", features = ["serde"]}
shvrpc = { git = "https://github.com/silicon-heaven/libshvrpc-rs", branch = "master" }
shvclient = { git = "https://github.com/silicon-heaven/libshvclient-rs", branch = "main", features = ["tokio"]}
futures = "0.3.30"
futures-util = "0.3.30"
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7.10", features = ["compat"] }
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "sqlite", "postgres", "chrono" ] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
url = "2.2"
env_logger = "0.9"
anyhow = "1.0"
serde_yaml = "0.9"
regex = "1.9"
simple_logger = { version = "5.0.0", features = ["stderr"] }
duration-str = "0.17"
chrono = { version = "0.4", features = ["serde"] }

# For local development
# [patch."https://github.com/silicon-heaven/libshvproto-rs"]
# shvproto = { path = "../shvrs/libshvproto-rs" }
# [patch."https://github.com/silicon-heaven/libshvclient-rs"]
# shvclient = { path = "../shvrs/libshvclient-rs" }

[patch.crates-io]
simple_logger = { git = "https://github.com/fvacek/rust-simple_logger.git", branch = "main" }
