[package]
name = "qxsqld"
version = "0.1.1"
edition = "2024"

[lib]
name = "qxsqld"
path = "src/lib.rs"

[[bin]]
name = "qxsqld"
path = "src/bin/qxsqld/main.rs"

# Core library dependencies (minimal, database-agnostic)
[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1.89"
anyhow = "1.0"
regex = "1.9"
shvproto = { git = "https://github.com/silicon-heaven/libshvproto-rs", branch = "master", features = ["serde"]}

# Binary-specific dependencies (only needed for the qxsqld executable)
# These are conditionally included when building the binary
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls", "sqlite", "postgres", "chrono" ], optional = true }
shvrpc = { git = "https://github.com/silicon-heaven/libshvrpc-rs", branch = "master", optional = true }
shvclient = { git = "https://github.com/silicon-heaven/libshvclient-rs", branch = "main", features = ["tokio"], optional = true }
futures = { version = "0.3.30", optional = true }
futures-util = { version = "0.3.30", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tokio-util = { version = "0.7.10", features = ["compat"], optional = true }
clap = { version = "4.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
log = { version = "0.4", optional = true }
url = { version = "2.2", optional = true }
env_logger = { version = "0.9", optional = true }
serde_yaml = { version = "0.9", optional = true }
simple_logger = { version = "5.0.0", features = ["stderr"], optional = true }
duration-str = { version = "0.17", optional = true }

[features]
default = ["binary"]
binary = [
    "sqlx",
    "shvrpc",
    "shvclient", 
    "futures",
    "futures-util",
    "tokio",
    "tokio-util",
    "clap",
    "serde_json",
    "log",
    "url",
    "env_logger",
    "serde_yaml",
    "simple_logger",
    "duration-str"
]

# For local development
# [patch."https://github.com/silicon-heaven/libshvproto-rs"]
# shvproto = { path = "../shvrs/libshvproto-rs" }
# [patch."https://github.com/silicon-heaven/libshvclient-rs"]
# shvclient = { path = "../shvrs/libshvclient-rs" }

[patch.crates-io]
simple_logger = { git = "https://github.com/fvacek/rust-simple_logger.git", branch = "main" }