[package]
name = "qxsql"
version = "0.1.1"
edition = "2024"

[lib]
name = "qxsql"
path = "src/lib.rs"

[[bin]]
name = "qxsqld"
path = "src/bin/qxsqld/main.rs"
required-features = ["qxsqld"]

# -----------------------------
# Core library dependencies
# -----------------------------
[dependencies]
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1.89"
anyhow = "1.0"
regex = "1.9"
shvproto = { version = "3.6.27", features = ["serde"] }
# shvrpc = "7.1.3"features = ["serde"] }
log = { version = "0.4" }
shvclient = { git = "https://github.com/silicon-heaven/libshvclient-rs", branch = "main", features = ["tokio"], optional = true }

# -----------------------------
# Optional dependencies (used only by the qxsqld binary)
# -----------------------------
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "postgres", "chrono"], optional = true }
shvrpc = { git = "https://github.com/silicon-heaven/libshvrpc-rs", branch = "master", optional = true }
futures = { version = "0.3.30", optional = true }
futures-util = { version = "0.3.30", optional = true }
tokio = { version = "1", features = ["full"], optional = true }
tokio-util = { version = "0.7.10", features = ["compat"], optional = true }
clap = { version = "4.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
url = { version = "2.2", optional = true }
serde_yaml = { version = "0.9", optional = true }
simple_logger = { version = "5.0.0", features = ["stderr"], optional = true }
duration-str = { version = "0.17", optional = true }

# -----------------------------
# Features
# -----------------------------
[features]
default = []
qxsqld = [
    "sqlx",
    "shvrpc",
    "shvclient",
    "futures",
    "futures-util",
    "tokio",
    "tokio-util",
    "clap",
    "serde_json",
    "url",
    "serde_yaml",
    "simple_logger",
    "duration-str"
]

# -----------------------------
# For local development overrides
# -----------------------------
# [patch."https://github.com/silicon-heaven/libshvproto-rs"]
# shvproto = { path = "../shvrs/libshvproto-rs" }
[patch."https://github.com/silicon-heaven/libshvclient-rs"]
shvclient = { path = "../libshvclient-rs" }

[patch.crates-io]
simple_logger = { git = "https://github.com/fvacek/rust-simple_logger.git", branch = "main" }
